[tool.poetry]
name = "partrackanareport"
version = "0.0.0"
description = "<Enter a one-sentence description of this project here.>"
authors = ["Tom Mertens <your.email@whatev.er>"]
license = "MIT"

readme = 'README.rst'

repository = "https://github.com/tomerten/partrackanareport"
homepage = "https://github.com/tomerten/partrackanareport"

keywords = ['packaging', 'poetry']

[tool.poetry.dependencies]
python = "^3.8"
ipykernel = "^5.5.5"
numpy = "^1.20.3"
pandas = "^1.2.4"
dask = "^2021.5.0"
PyNAFF = "^1.1.4"
matplotlib = "^3.4.2"
plotly = "^4.14.3"
nbsphinx = "^0.8.5"
tqdm = "^4.60.0"
joblib = "^1.0.1"

[tool.poetry.dev-dependencies]
pytest = "^4.4.2"
black = "^21.5b1"
isort = "^5.8.0"
pylint = "^2.8.2"

[tool.poetry.scripts]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
